<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:background="@drawable/high_score_background"
                android:id="@+id/highScoresLayout"
                android:layout_height="match_parent" android:weightSum="1">
    <LinearLayout
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:paddingTop="70dp"
            android:background="@drawable/scroll"
            android:headerDividersEnabled="false"
            android:paddingLeft="55dp"
            android:paddingRight="20dp"
            android:layout_gravity="center_horizontal" android:layout_weight="0.4"
            android:divider="@null"
            android:dividerHeight="5dp"
            android:layout_alignParentTop="true" android:layout_alignParentBottom="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Credits:"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp"
                android:id="@+id/textView" android:textColor="@android:color/holo_blue_dark" android:textStyle="bold"/>
        <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_developer"
                android:textColor="@android:color/holo_purple"
                android:lineSpacingExtra="10dp"
                android:id="@+id/tvDeveloperLink" android:singleLine="false"/>
        <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_ponies"
                android:textColor="@android:color/holo_purple"
                android:lineSpacingExtra="10dp"
                android:id="@+id/tvPoniesLink" android:singleLine="false"/>
        <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_background_image"
                android:textColor="@android:color/holo_purple"
                android:lineSpacingExtra="10dp"
                android:id="@+id/tvBackgroundImageLink" android:singleLine="false"/>
        <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_timor"
                android:textColor="@android:color/holo_purple"
                android:lineSpacingExtra="10dp"
                android:id="@+id/tvTimorLink" android:singleLine="false"/>
        <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_copyright"
                android:textColor="@android:color/holo_purple"
                android:lineSpacingExtra="10dp"
                android:id="@+id/tvCopyright" android:singleLine="false"/>

    </LinearLayout>


</RelativeLayout>